# devel_wsc_cpp

./: .gitignore  CMakeLists.txt  README.md
cpp_examples_2025/: Makefile  README.md  readme_catch_install.txt
cpp_examples_2025/include/: myfunc.hpp  taylor.hpp
cpp_examples_2025/src/: assert1.cpp  factorial.cpp  format1.cpp  guess.cpp  hello.cpp  myfunc.cpp  pascal.cpp  taylor.cpp  test1.cpp
cpp_examples_2025/test/: test_factorial.cpp  test_myfunc.cpp
crc_calc-main/: Makefile
crc_calc-main/SRC/: crcCalculator.cpp  crcCalculator.h  crcConsole.cpp
examples/calculator/: CMakeLists.txt  main.cpp
examples/data_structures/: CMakeLists.txt  main.cpp
examples/file_io/: CMakeLists.txt  main.cpp
examples/hello_world/: CMakeLists.txt
